<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.tianlangstudio.data.hamal</groupId>
  <artifactId>data-hamal</artifactId>
  <version>2.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Data Hamal</name>
  <url>https://github.com/TianLangStudio/DataXServer</url>
  <inceptionYear>2019</inceptionYear>
  <distributionManagement>
    <site>
      <id>TianlangStudio</id>
      <url>https://github.com/TianLangStudio/DataXServer</url>
    </site>
  </distributionManagement>
    <modules>
        <module>common</module>
        <module>core</module>
        <module>hamal-yarn</module>
        <module>httpserver</module>
        <module>thriftserver</module>
    </modules>
  <properties>
      <argLine>-Dfile.encoding=UTF-8</argLine>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
      <metrics.version>3.1.2</metrics.version>
      <akka.group>com.typesafe.akka</akka.group>
      <akka.version>2.5.25</akka.version>
      <akka.http.version>10.1.9</akka.http.version>
      <java.version>1.8</java.version>
      <datax.version>0.0.1-SNAPSHOT</datax.version>
      <PermGen>64m</PermGen>
      <MaxPermGen>512m</MaxPermGen>
      <CodeCacheSize>512m</CodeCacheSize>
      <scala.version>2.13.0</scala.version>
      <scala.binary.version>2.13</scala.binary.version>
      <slf4j-api-version>1.7.26</slf4j-api-version>
      <!--logback-classic-version>1.0.13</logback-classic-version-->
      <logback-version>1.2.3</logback-version>
      <thrift.version>0.14.0</thrift.version>
      <commons-lang-version>2.6</commons-lang-version>
      <commons-pool2-version>2.4.1</commons-pool2-version>
      <commons-dbcp-version>1.4</commons-dbcp-version>
      <hadoop.version>2.6.1</hadoop.version>
      <dom4j.version>2.1.3</dom4j.version>
      <junit.version>4.13.1</junit.version>
      <scalatest.version>3.2.0-M1</scalatest.version>
      <typesafe-config-version>1.2.1</typesafe-config-version>
      <data-hamal-version>2.0.0-SNAPSHOT</data-hamal-version>
      <spark-boot-version>2.1.7.RELEASE</spark-boot-version>
      <datax-home>/data/test/datax</datax-home>
  </properties>
<dependencyManagement>
  <dependencies>
      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-parent</artifactId>
          <version>${spark-boot-version}</version>
          <type>pom</type>
          <scope>import</scope>
      </dependency>
      <dependency>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-library</artifactId>
          <version>${scala.version}</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.scala-lang</groupId>
          <artifactId>scala-compiler</artifactId>
          <version>${scala.version}</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.apache.thrift</groupId>
          <artifactId>libthrift</artifactId>
          <version>${thrift.version}</version>
      </dependency>
      <dependency>
          <groupId>com.alibaba.datax</groupId>
          <artifactId>datax-common</artifactId>
          <version>${datax.version}</version>
      </dependency>
      <dependency>
          <groupId>com.alibaba.datax</groupId>
          <artifactId>datax-core</artifactId>
          <version>${datax.version}</version>
      </dependency>
      <dependency>
          <groupId>com.alibaba.datax</groupId>
          <artifactId>datax-transformer</artifactId>
          <version>${datax.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-pool2</artifactId>
          <version>${commons-pool2-version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-actor_${scala.binary.version}</artifactId>
          <version>${akka.version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-stream_${scala.binary.version}</artifactId>
          <version>${akka.version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-http_${scala.binary.version}</artifactId>
          <version>${akka.http.version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-http-spray-json_${scala.binary.version}</artifactId>
          <version>${akka.http.version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-http-testkit_${scala.binary.version}</artifactId>
          <version>${akka.http.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>${slf4j-api-version}</version>
      </dependency>
      <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-classic</artifactId>
          <version>${logback-version}</version>
      </dependency>
      <dependency>
          <groupId>ch.qos.logback</groupId>
          <artifactId>logback-core</artifactId>
          <version>${logback-version}</version>
      </dependency>
      <!--<dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j</artifactId>
          <version>2.3</version>
          <type>pom</type>
      </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-core</artifactId>
          <version>2.3</version>
      </dependency>
      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-api</artifactId>
          <version>2.3</version>
      </dependency>-->
      <dependency>
          <groupId>org.apache.directory.studio</groupId>
          <artifactId>org.apache.commons.lang</artifactId>
          <version>${commons-lang-version}</version>
      </dependency>
      <dependency>
          <groupId>commons-dbcp</groupId>
          <artifactId>commons-dbcp</artifactId>
          <version>${commons-dbcp-version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-yarn-client</artifactId>
          <version>${hadoop.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-yarn-server-tests</artifactId>
          <version>${hadoop.version}</version>
          <classifier>tests</classifier>
      </dependency>
      <dependency>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-common</artifactId>
          <version>${hadoop.version}</version>
          <scope>provided</scope>
          <exclusions>
              <exclusion>
                  <groupId>org.slf4j</groupId>
                  <artifactId>slf4j-log4j12</artifactId>
              </exclusion>
          </exclusions>
      </dependency>
      <dependency>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-yarn-server-tests</artifactId>
          <version>${hadoop.version}</version>
      </dependency>
      <dependency>
          <groupId>org.dom4j</groupId>
          <artifactId>dom4j</artifactId>
          <version>${dom4j.version}</version>
      </dependency>
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <version>${junit.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.scalatest</groupId>
          <artifactId>scalatest_${scala.binary.version}</artifactId>
          <version>${scalatest.version}</version>
      </dependency>
      <dependency>
          <groupId>io.dropwizard.metrics</groupId>
          <artifactId>metrics-core</artifactId>
          <version>${metrics.version}</version>
      </dependency>
      <dependency>
          <groupId>io.dropwizard.metrics</groupId>
          <artifactId>metrics-ganglia</artifactId>
          <version>${metrics.version}</version>
      </dependency>
      <dependency>
          <groupId>io.dropwizard.metrics</groupId>
          <artifactId>metrics-jvm</artifactId>
          <version>${metrics.version}</version>
      </dependency>
      <dependency>
          <groupId>com.typesafe</groupId>
          <artifactId>config</artifactId>
          <version>${typesafe-config-version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-remote_${scala.binary.version}</artifactId>
          <version>${akka.version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-slf4j_${scala.binary.version}</artifactId>
          <version>${akka.version}</version>
      </dependency>
      <dependency>
          <groupId>${akka.group}</groupId>
          <artifactId>akka-testkit_${scala.binary.version}</artifactId>
          <version>${akka.version}</version>
          <scope>test</scope>
      </dependency>
      <!--dependency>
          <groupId>org.mapdb</groupId>
          <artifactId>mapdb</artifactId>
          <version>2.0-beta2</version>
      </dependency-->
  </dependencies>
</dependencyManagement>
  <build>
      <resources>
          <resource>
              <directory>src/main/resources</directory>
          </resource>
      </resources>
      <testResources>
          <testResource>
              <directory>src/test/resources</directory>
          </testResource>
      </testResources>
      <outputDirectory>target/scala-${scala.binary.version}/classes</outputDirectory>
      <testOutputDirectory>target/scala-${scala.binary.version}/test-classes</testOutputDirectory>
<!--
      <resources>
          <resource>
              <directory>src/main/resources</directory>
              <targetPath>${project.build.directory}/server_conf</targetPath>
              <excludes>
                  <exclude>**/*.java</exclude>
                  <exclude>**/assembly.xml</exclude>
              </excludes>
          </resource>
          <resource>
              <directory>src/main/test_resources</directory>
              <targetPath>${project.build.directory}/scala-${scala.binary.version}/test-classes</targetPath>
              <excludes>
                  <exclude>**/*.java</exclude>
                  <exclude>**/assembly.xml</exclude>
              </excludes>
          </resource>

      </resources>-->
    <plugins>
    <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.4</version>
        <configuration>
            <forkMode>once</forkMode>
            <argLine>-Dfile.encoding=UTF-8</argLine>
        </configuration>
    </plugin>

        <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
            <version>1.9.1</version>
        <executions>
        <!--execution>
            <id>add-default-sources</id>
            <phase>generate-sources</phase>
            <goals>
                <goal>add-source</goal>
            </goals>
            <configuration>
                <sources>
                    <source>v${hive.version.short}/src/main/scala</source>
                </sources>
            </configuration>
        </execution-->
        <execution>
        <id>add-source</id>
            <phase>generate-sources</phase>
            <goals>
                <goal>add-source</goal>
            </goals>
            <configuration>
                <sources>
                    <source>src/main/thrift/gen-java</source>
                </sources>
            </configuration>
        </execution>
        </executions>
        </plugin>

        <!--plugin>
        <groupId>org.apache.thrift.tools</groupId>
        <artifactId>maven-thrift-plugin</artifactId>
        <version>0.1.11</version>
        <configuration>
            <thriftExecutable>D:\\java\\thrift\\thrift-0.9.3.exe</thriftExecutable>
        </configuration>
        <executions>
            <execution>
                <id>thrift-sources</id>
                <phase>generate-sources</phase>
                <goals>
                    <goal>compile</goal>
                </goals>
            </execution>
            <execution>
                <id>thrift-test-sources</id>
                <phase>generate-test-sources</phase>
                <goals>
                    <goal>testCompile</goal>
                </goals>
            </execution>
        </executions>
      </plugin-->
        <!--<plugin>
            <groupId>net.alchim31.maven</groupId>
            <artifactId>scala-maven-plugin</artifactId>
            <version>3.2.2</version>
            <executions>
                <execution>
                    <id>eclipse-add-source</id>
                    <goals>
                        <goal>add-source</goal>
                    </goals>
                </execution>
                <execution>
                    <id>scala-compile-first</id>
                    <phase>process-resources</phase>
                    <goals>
                        <goal>compile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>scala-test-compile-first</id>
                    <phase>process-test-resources</phase>
                    <goals>
                        <goal>testCompile</goal>
                    </goals>
                </execution>
                <execution>
                    <id>attach-scaladocs</id>
                    <phase>verify</phase>
                    <goals>
                        <goal>doc-jar</goal>
                    </goals>
                </execution>
            </executions>
            <configuration>
                <scalaVersion>${scala.version}</scalaVersion>
                <recompileMode>incremental</recompileMode>
                <useZincServer>true</useZincServer>
                <args>
                    <arg>-unchecked</arg>
                    <arg>-deprecation</arg>
                    <arg>-feature</arg>
                </args>
                <jvmArgs>
                    <jvmArg>-Xms1024m</jvmArg>
                    <jvmArg>-Xmx1024m</jvmArg>
                    <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
                    <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
                    <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
                    <jvmArg>-Dfile.encoding=UTF-8</jvmArg>
                </jvmArgs>
                <javacArgs>
                    <javacArg>-source</javacArg>
                    <javacArg>${java.version}</javacArg>
                    <javacArg>-target</javacArg>
                    <javacArg>${java.version}</javacArg>
                    <javacArg>-Xlint:all,-serial,-path</javacArg>
                </javacArgs>
            </configuration>
        </plugin>-->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.3</version>
            <configuration>
                <source>${java.version}</source>
                <target>${java.version}</target>
                <encoding>UTF-8</encoding>
                <maxmem>1024m</maxmem>
                <fork>true</fork>
                <compilerArgs>
                    <arg>-Xlint:all,-serial,-path</arg>
                </compilerArgs>
            </configuration>
        </plugin>
       <!-- <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>2.4</version>
            <configuration>
                <descriptors>
                    <descriptor>src/main/resources/assembly.xml</descriptor>
                </descriptors>
                <descriptorRefs>
                    <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
            <executions>
                <execution>
                    <id>make-assembly</id> &lt;!&ndash; this is used for inheritance merges &ndash;&gt;
                    <phase>package</phase> &lt;!&ndash; bind to the packaging phase &ndash;&gt;
                    <goals>
                        <goal>single</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>-->
        <!--<plugin>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest-maven-plugin</artifactId>
            <version>1.0</version>
            <configuration>
                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                <junitxml>.</junitxml>
                <filereports>WDF TestSuite.txt</filereports>
            </configuration>
            <executions>
                <execution>
                    <id>test</id>
                    <goals>
                        <goal>test</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>-->
    </plugins>
  </build>
</project>
